<resources>
    <string name="app_name">Feirinha UFABC</string>
    <string name="login_button_entrar">Entrar</string>
    <string name="login_txt_senha">Senha</string>
    <string name="login_txt_usuario">Usuário</string>
    <string name="login_button_anonimo">Entrar em modo anônimo</string>
    <string name="usuario_senha_incorretos">Usuário e/ou senha incorretos</string>
    <string name="info_destaques">Produtos</string>
    <string name="avaliar">Avaliar</string>
    <string name="lpshort">Lorem ipsum</string>
    <string name="lpmedium">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lplong">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus cursus odio. Ut porta,
        tortor quis tristique tempus, felis mi pharetra dui, id dictum dolor ipsum sit amet felis. Proin tincidunt nunc
        in dui congue, quis egestas dolor facilisis. Integer euismod fringilla egestas. Mauris mollis magna ac ante
        condimentum dignissim.
    </string>
    <string name="title_activity_gerenciar_comercio">GerenciarComercio</string>
    <string name="acessar_comercio">Minha loja</string>
    <string name="gerenciar">Gerenciar loja</string>
    <string name="adicionar_produto">Adicionar produto</string>
    <string name="adicionar_nome">Nome</string>
    <string name="adicionar_descricao">Descrição</string>
    <string name="adicionar_valor">Valor</string>
    <string name="title_activity_adicionar_produto">AdicionarProduto</string>
    <string name="adicionar_btn_selecionarImagem">Selecionar imagem</string>
    <string name="camera_armazenamento_rationale">Precisamos do acesso ao armazenamento</string>
    <string name="camera_armazenamento_nao_aceito">Armazenamento não aceito</string>
    <string name="menu_gerenciar_loja">Gerenciar comércio</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="catalogo_erro_id_comercio">Erro ao sincronizar login com comércio</string>
    <string name="gerenciar_remover">Remover</string>
    <string name="gerenciar_editar">Editar</string>
    <string name="gerenciar_adicionar">Adicionar novo</string>
    <string name="adicionar_erro_selecionar_imagem">Não foi possivel selecionar a imagem</string>
    <string name="gerenciar_produto_removido">Produto removido com sucesso</string>
    <string name="gerenciar_produto_cancelado">Remoção cancelada</string>
    <string name="title_activity_editar_produto">EditarProduto</string>
</resources>
