<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

            <ImageView
                    android:id="@+id/gerenciar_recycler_img_foto"
                    android:src="@drawable/sem_imagem"
                    android:foreground="@drawable/rounded_fg"
                    android:scaleType="centerCrop"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <TextView
                    android:id="@+id/gerenciar_recycler_txt_nome"
                    android:text="@string/lpshort"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/gerenciar_recycler_img_foto"
                    app:layout_constraintRight_toLeftOf="@id/gerenciar_recycler_img_foto"
                    app:layout_constraintLeft_toLeftOf="parent"
            />

            <TextView
                    android:id="@+id/gerenciar_recycler_txt_descricao"
                    android:text="@string/lpmedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintLeft_toLeftOf="@id/gerenciar_recycler_txt_nome"
                    app:layout_constraintRight_toRightOf="@id/gerenciar_recycler_txt_nome"
                    app:layout_constraintTop_toBottomOf="@id/gerenciar_recycler_txt_nome"
            />
            <TextView
                    android:id="@+id/gerenciar_recycler_txt_valor"
                    android:text="R$ 4,00"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/gerenciar_recycler_txt_nome"
                    app:layout_constraintTop_toBottomOf="@id/gerenciar_recycler_txt_descricao"
            />

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/gerenciar_recycler_switch"
                    app:layout_constraintTop_toBottomOf="@id/gerenciar_recycler_txt_valor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/gerenciar_button_remover"
                    android:text="@string/gerenciar_remover"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/gerenciar_recycler_switch"
                    app:layout_constraintBottom_toBottomOf="@id/gerenciar_recycler_switch"
            />
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/gerenciar_button_editar"
                    android:text="@string/gerenciar_editar"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    app:layout_constraintRight_toLeftOf="@id/gerenciar_button_remover"
                    app:layout_constraintTop_toTopOf="@id/gerenciar_recycler_switch"
                    app:layout_constraintBottom_toBottomOf="@id/gerenciar_recycler_switch"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>